--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* how to add bootstrap to angular: https://www.techiediaries.com/angular-bootstrap/ */
+@import "~bootstrap/dist/css/bootstrap.css";
