before put konnektor rest

--- a/frontend/src/app/konnektor/konnektor-dropdown/konnektor-dropdown.component.html
+++ b/frontend/src/app/konnektor/konnektor-dropdown/konnektor-dropdown.component.html
@@ -3,5 +3,6 @@
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button ngbDropdownItem (click)="onRemove()">Remove</button>
         <button ngbDropdownItem (click)="onModify()">Modify</button>
+        <button ngbDropdownItem (click)="onNew()">New</button>
       </div>
     </div>
