--- a/frontend/src/app/konnektor/konnektor-modify/konnektor-modify.component.html
+++ b/frontend/src/app/konnektor/konnektor-modify/konnektor-modify.component.html
@@ -1,35 +1,35 @@
-<form>
+<form [formGroup]="konnektorForm">
 
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="id">Id</label>
-      <input type="number" class="form-control" id="id" placeholder="id">
+      <input type="number" formControlName="id" class="form-control" id="id" placeholder="id">
     </div>
     <div class="form-group col-md-6">
       <label for="hostname">Hostname</label>
-      <input type="hostname" class="form-control" id="hostname" placeholder="hostname">
+      <input type="text" formControlName="hostName" class="form-control" id="hostname" placeholder="hostname">
     </div>
   </div>
 
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="serialNumber">serialNumber</label>
-      <input type="text" class="form-control" id="serialNumber">
+      <input type="text" formControlName="serialNumber" class="form-control" id="serialNumber">
     </div>
     <div class="form-group col-md-6">
       <label for="firmwareVersion">firmwareVersion</label>
-      <input type="text" class="form-control" id="firmwareVersion">
+      <input type="text" formControlName="firmwareVersion" class="form-control" id="firmwareVersion">
     </div>
   </div>
 
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="hardwareVersion">hardwareVersion</label>
-      <input type="text" class="form-control" id="hardwareVersion">
+      <input type="text" formControlName="hardwareVersion" class="form-control" id="hardwareVersion">
     </div>
     <div class="form-group col-md-6">
       <label for="created">created</label>
-      <input type="text" class="form-control" id="created">
+      <input type="text"formControlName="created" class="form-control" id="created">
     </div>
   </div>
 
@@ -37,7 +37,7 @@
 
     <div class="form-group col-md-4">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck">
+        <input class="form-check-input" formControlName="active" type="checkbox" id="gridCheck">
         <label class="form-check-label" for="gridCheck">
           Active
         </label>
@@ -50,6 +50,6 @@
 
 
   </div>
-  <button type="submit" class="btn btn-primary">Sign in</button>
+  <button type="submit" (click)="onSubmit()" class="btn btn-primary">Save</button>
 
 </form>
