--- a/frontend/src/app/konnektor/konnektor-modify/konnektor-modify.component.html
+++ b/frontend/src/app/konnektor/konnektor-modify/konnektor-modify.component.html
@@ -6,8 +6,8 @@
       <input type="number" formControlName="id" class="form-control" id="id" placeholder="id">
     </div>
     <div class="form-group col-md-6">
-      <label for="hostname">Hostname</label>
-      <input type="text" formControlName="hostName" class="form-control" id="hostname" placeholder="hostname">
+      <label for="hostName">Hostname</label>
+      <input type="text" formControlName="hostName" class="form-control" id="hostName" placeholder="hostname">
     </div>
   </div>
 
@@ -51,5 +51,5 @@
 
   </div>
   <button type="submit" (click)="onSubmit()" class="btn btn-primary">Save</button>
-
+  <button style="margin-left: 10px;" ype="button" (click)="onBack()" class="btn btn-primary">Zurück</button>
 </form>
