--- a/frontend/src/app/konnektor/auditlog-modal/auditlog-modal.component.html
+++ b/frontend/src/app/konnektor/auditlog-modal/auditlog-modal.component.html
@@ -14,7 +14,11 @@
     <ngx-datatable-column  name="Id" prop="id" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
     <ngx-datatable-column  name="user" prop="user" [canAutoResize]="true" [sortable]="true"></ngx-datatable-column>
     <ngx-datatable-column  name="konnektor" prop="konnektor" [canAutoResize]="true" [sortable]="true"></ngx-datatable-column>
-    <ngx-datatable-column  name="userAction" prop="userAction" [canAutoResize]="true" [sortable]="true"></ngx-datatable-column>
+    <ngx-datatable-column  name="userAction" prop="userAction" [canAutoResize]="true" [sortable]="true">
+      <ng-template  let-row="row" ngx-datatable-cell-template>
+        {{mapUserActionToString(row.userAction)}}
+      </ng-template>
+    </ngx-datatable-column>
     <ngx-datatable-column  name="timestamp" prop="timestamp" [canAutoResize]="true" [sortable]="true"></ngx-datatable-column>
     <ngx-datatable-column  name="Edit" [canAutoResize]="false" [sortable]="false"></ngx-datatable-column>
     <ngx-datatable-column  name="Delete" [canAutoResize]="false" [sortable]="false"></ngx-datatable-column>
