--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,5 +2,5 @@
 
 /* how to add bootstrap to angular: https://www.techiediaries.com/angular-bootstrap/ */
 @import "~bootstrap/dist/css/bootstrap.css";
-
+@import "~bootstrap-icons/font/bootstrap-icons.css";
 
