--- a/frontend/src/app/konnektor/konnektor-view.component.html
+++ b/frontend/src/app/konnektor/konnektor-view.component.html
@@ -36,7 +36,7 @@
   <div  class="card mt-3">
     <div class="card-body">
     <ngx-datatable #konnektorDataTable id="konnektorDataTable"
-                   [columnMode]="'force'"
+                   [columnMode]="'flex'"
                    [messages]="{emptyMessage: 'Keine Daten vorhanden'}"
                    [headerHeight]="headerHeight"
                    [rowHeight]="rowHeight"
@@ -61,9 +61,9 @@
 
       </ngx-datatable-column>
 
-      <ngx-datatable-column [width]="120" name="Serial Number" prop="serialNumber" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
+      <ngx-datatable-column [width]="20" name="Serial Number" prop="serialNumber" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
       <ngx-datatable-column [width]="170" name="Firmware Version" prop="firmwareVersion" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
-      <ngx-datatable-column [width]="170" name="Hardware Version" prop="hardwareVersion" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
+      <ngx-datatable-column [width]="470" name="Hardware Version" prop="hardwareVersion" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
       <ngx-datatable-column [width]="200" name="Created" prop="created" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
       <ngx-datatable-column [width]="95" class="pl-4" name="Active" prop="active" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
       <ngx-datatable-column [width]="100" class="pl-4">
