--- a/frontend/src/app/konnektor/konnektor-modify/konnektor-modify.component.html
+++ b/frontend/src/app/konnektor/konnektor-modify/konnektor-modify.component.html
@@ -57,4 +57,11 @@
   <button type="submit" (click)="onSubmit()" class="btn btn-primary">Save</button>
   <button id="back-button" style="margin-left: 10px;" (click)="onBack()" class="btn btn-primary">Zurück</button>
   <button style="margin-left: 10px;" type="button"  (click)="open()" class="btn btn-primary" [disabled]="!konnektor?.auditlogs?.length" >Show auditlog modal</button>
+
+
+  <input [value]="fullName" (input)="twoway($event)" />
+  {{fullName}}
+
 </form>
+
+
