--- a/frontend/src/app/konnektor/auditlog-modal/auditlog-modal.component.html
+++ b/frontend/src/app/konnektor/auditlog-modal/auditlog-modal.component.html
@@ -20,15 +20,15 @@
   >
     <ngx-datatable-column  [width]="66" name="Id" prop="id" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
 
-    <ngx-datatable-column  name="user" prop="user" [canAutoResize]="true" [sortable]="true">
+    <ngx-datatable-column  name="user" prop="user" [canAutoResize]="true" [sortable]="true" >
       <ng-template  ngx-datatable-cell-template let-row="row" let-rowIndex="rowIndex">
-        <span *ngIf="!editable[row.id + '-user']" (dblclick)="editable[row.id + '-user'] = true">
+        <span *ngIf="!editable[row.id + '-user']" (dblclick)="editable[row.id + '-user'] = true" [id]="row.id+'-userspan'">
           {{row.user}}
-          {{templateMethodOne(row.user)}} <!--template expression ami a user string hosszat adja vissza-->
-          {{row.user | demo}} <!--pure pipe, ami a a user string hosszat adja vissza-->
-          {{row.user | usernamelength}} <!--caching vlaue with un-pure pipe, ami a a user string hosszat adja vissza-->
+          <!--{{templateMethodOne(row.user)}} &lt;!&ndash;template expression ami a user string hosszat adja vissza&ndash;&gt;
+          {{row.user | demo}} &lt;!&ndash;pure pipe, ami a a user string hosszat adja vissza&ndash;&gt;
+          {{row.user | usernamelength}} &lt;!&ndash;caching vlaue with un-pure pipe, ami a a user string hosszat adja vissza&ndash;&gt;-->
         </span>
-        <input type="text" class="form-control"  *ngIf="editable[row.id + '-user']" (blur)="onUpdateCell(row.id, '-user', $event)" [value] = "row.user">
+        <input type="text" class="form-control" [id]="row.id+'-user'" *ngIf="editable[row.id + '-user']" (blur)="onUpdateCell(row.id, '-user', $event)" [value] = "row.user">
       </ng-template>
     </ngx-datatable-column>
 
@@ -75,7 +75,7 @@
   <button id="saveall-button" style="margin-left: 10px;" (click)="onSaveAll()" class="btn btn-primary">Save all</button>
   <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
   <button type="button"  (click)="changeTitle()">Change title</button>
-  <button type="button"  (click)="inc()">Increase text</button>
+  <button type="button"  (click)="inc()" id="increaseButton">Increase text</button>
   <button type="button"  (click)="dec()">Decrease text</button>
 </div>
 <div [style.font-size.px]="fontSizePx">Resizable Text</div>
