--- a/frontend/src/app/core/navigation.component.html
+++ b/frontend/src/app/core/navigation.component.html
@@ -12,6 +12,9 @@
         <a class="nav-link" routerLink="/navigation/auditlog">Auditlog</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/navigation/cd">Change detection</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
