onpush before rework

--- a/frontend/src/app/core/navigation.component.html
+++ b/frontend/src/app/core/navigation.component.html
@@ -15,6 +15,9 @@
         <a class="nav-link" routerLink="/navigation/cd">Change detection</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/navigation/onpush" tabindex="-1" aria-disabled="true">OnPush</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
