onpush with new set of childs

--- a/frontend/src/app/onpush/onpushchild.component.html
+++ b/frontend/src/app/onpush/onpushchild.component.html
@@ -1,6 +1,8 @@
 child a szam: {{szam}}<br/>
 expreOne: {{expreOne()}}<br/>
-[ez]="szam" @Input parameter from parent: {{ez}}<br/>
+
+<br/>
+  @Input user.name: {{user.name}}
 <br/>
 <button (click)="incrementServiceSzam()">Incerement service.szam via child</button>
 <button (click)="updateSzam()">update szam from service</button>
