--- a/frontend/src/app/ChangeDetection/cdchild.component.html
+++ b/frontend/src/app/ChangeDetection/cdchild.component.html
@@ -1,11 +1,14 @@
 
+
+<hr>
+
+CD child component template
 <div style="border: dot-dash #7C2EDD">
-  <hr>
   szam: {{szam}}
   <br/>
   user: {{user.name}}
   <br/>
   counterInputPropertySetter: {{counterInputPropertySetter}}
-  <hr>
   userSet: {{userSet?.age}}
 </div>
+<hr>
