--- a/frontend/src/app/auditlog/auditlog.component.html
+++ b/frontend/src/app/auditlog/auditlog.component.html
@@ -1,1 +1,30 @@
 auditlog
+<i class="fa fa-user fa-5x"></i>
+
+<div class="container">
+  <div class="fontuser">
+    <label><b>Username</b></label>
+    <input type="text"
+           placeholder="Enter Username"
+           name="uname" required>
+    <i class="fa fa-user fa-lg"></i>
+  </div>
+
+  <div class="fontpassword">
+    <label><b>Password</b></label>
+    <input type="password"
+           placeholder="Enter Password"
+           name="psw" required>
+    <i class="fa fa-key fa-lg"></i>
+
+    <label><b>Password</b></label>
+    <input type="password"
+           placeholder="Enter Password"
+           name="psw" required>
+    <i class="fa fa-key fa-lg"></i>
+  </div>
+
+  <button type="submit">Login</button>
+  <input type="checkbox" checked="checked">
+  Remember me
+</div>
