--- a/frontend/src/app/onpush/onpushparent.component.html
+++ b/frontend/src/app/onpush/onpushparent.component.html
@@ -1,4 +1,5 @@
-onp parent
+
+<h3>Parent</h3>
 
 parent szam: {{szam}}
 <br/>
@@ -10,7 +11,8 @@ parent szam: {{szam}}
 
 <hr/>
 
-<childA [user]="user"></childA>
 <hr/>
 
-<childB></childB>
+<childB [szam]="szam"></childB>
+
+
