--- a/frontend/src/app/konnektor/konnektor-view.component.html
+++ b/frontend/src/app/konnektor/konnektor-view.component.html
@@ -3,6 +3,25 @@
 </ng-template>
 
 <ng-template #loaded>
+
+  <br>
+  <button (click)="konnektorChild.increment()">Methodenaufruf auf dem child componente mit temp ref variable</button>
+
+  <br>
+  <button (click)="useViewChild()">Counter on child vith ViewChild</button>
+
+
+  <konnektor-view-child #konnektorChild></konnektor-view-child>
+
+  <br>
+  <br>
+  <br>
+  <!-- using template ref variable-->
+  <button (click)="myinput.value='wwwww'">write myinput mező értékének megváltoztatása</button>
+  write input mező: <input type="text" name="myinput" #myinput>
+  <br>
+
+
   <div class="card">
     <div class="card-body">
       <h5 id="konnektorSize" class="card-title">Konnektor's number: {{konnektors.length}}</h5>
@@ -10,6 +29,7 @@
       <form [formGroup]="konnektorFilterForm" class="form-inline">
         <label class="mr-sm-2" for="id">Id</label>
         <input type="text" class="form-control mb-2 mr-sm-2" id="id" formControlName="id">
+        <label #idLabel></label>
 
         <label class="mr-sm-2" for="hostname">Hostname</label>
         <input type="text" class="form-control mb-2 mr-sm-2" id="hostName" formControlName="hostName" placeholder="no whitespaces">
@@ -66,6 +86,7 @@
       <ngx-datatable-column [width]="470" name="Hardware Version" prop="hardwareVersion" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
       <ngx-datatable-column [width]="200" name="Created" prop="created" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
       <ngx-datatable-column [width]="95" class="pl-4" name="Active" prop="active" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
+      <ngx-datatable-column [width]="95" class="pl-4" name="hostNameAndSerial" prop="hostNameAndSerial" [canAutoResize]="false" [sortable]="true"></ngx-datatable-column>
       <ngx-datatable-column [width]="100" class="pl-4">
         <ng-template ngx-datatable-cell-template let-row="row">
          <app-konnektor-dropdown [konnektor]="row"></app-konnektor-dropdown>
