--- a/frontend/src/app/onpush/childA.component.html
+++ b/frontend/src/app/onpush/childA.component.html
@@ -1,8 +1,10 @@
+<hr>
+
+<h3>CHILD A</h3>
 child a szam: {{szam}}<br/>
-expreOne: {{expreOne()}}<br/>
 
 <br/>
-  @Input user.name: {{user.name}}
 <br/>
 <button (click)="incrementServiceSzam()">Incerement service.szam via child</button>
 <button (click)="updateSzam()">update szam from service</button>
+
